--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -4479,6 +4479,7 @@ Deny from 116.206.229.136
 Deny from 116.206.244.140
 Deny from 116.206.247.37
 Deny from 116.206.253.164
+Deny from 116.206.253.169
 Deny from 116.212.147.171
 Deny from 116.212.155.17
 Deny from 116.21.30.254
@@ -6246,6 +6247,7 @@ Deny from 129.211.171.58
 Deny from 129.211.171.75
 Deny from 129.213.126.250
 Deny from 129.213.144.119
+Deny from 129.213.150.89
 Deny from 129.213.19.98
 Deny from 129.213.37.50
 Deny from 129.213.67.237
@@ -7771,6 +7773,7 @@ Deny from 14.228.103.253
 Deny from 14.228.82.210
 Deny from 14.232.245.15
 Deny from 14.232.245.243
+Deny from 14.233.204.146
 Deny from 142.4.20.101
 Deny from 142.4.213.140
 Deny from 142.4.22.16
@@ -8529,6 +8532,7 @@ Deny from 149.102.233.225
 Deny from 149.102.242.162
 Deny from 149.102.244.42
 Deny from 149.102.247.243
+Deny from 149.102.254.10
 Deny from 149.102.254.34
 Deny from 149.108.146.233
 Deny from 149.115.239.140
@@ -8995,6 +8999,7 @@ Deny from 15.235.82.37
 Deny from 15.236.218.89
 Deny from 15.236.224.248
 Deny from 15.236.42.130
+Deny from 15.237.106.22
 Deny from 15.237.128.43
 Deny from 15.237.128.65
 Deny from 15.237.144.110
@@ -11084,6 +11089,7 @@ Deny from 167.86.83.9
 Deny from 167.86.89.58
 Deny from 167.86.91.247
 Deny from 167.86.94.107
+Deny from 167.88.162.182
 Deny from 167.88.167.11
 Deny from 167.88.169.169
 Deny from 167.88.175.42
@@ -11139,6 +11145,7 @@ Deny from 167.99.79.230
 Deny from 167.99.84.213
 Deny from 167.99.8.63
 Deny from 167.99.92.106
+Deny from 167.99.92.188
 Deny from 168.0.102.174
 Deny from 168.0.35.206
 Deny from 168.100.9.67
@@ -11665,6 +11672,7 @@ Deny from 172.241.142.133
 Deny from 172.241.142.151
 Deny from 172.241.142.42
 Deny from 172.241.146.128
+Deny from 172.241.146.206
 Deny from 172.241.147.205
 Deny from 172.241.152.51
 Deny from 172.241.153.39
@@ -11827,6 +11835,7 @@ Deny from 172.86.116.191
 Deny from 172.86.116.245
 Deny from 172.86.117.143
 Deny from 172.86.121.237
+Deny from 172.86.124.99
 Deny from 172.86.64.19
 Deny from 172.86.75.240
 Deny from 172.86.75.47
@@ -13582,6 +13591,7 @@ Deny from 181.170.178.167
 Deny from 181.170.203.101
 Deny from 181.170.250.12
 Deny from 181.170.46.233
+Deny from 18.117.117.225
 Deny from 18.117.11.87
 Deny from 18.117.120.97
 Deny from 18.117.216.74
@@ -13611,6 +13621,7 @@ Deny from 181.188.122.209
 Deny from 18.118.8.163
 Deny from 181.188.21.155
 Deny from 181.188.33.223
+Deny from 18.118.85.195
 Deny from 181.189.165.156
 Deny from 18.119.107.87
 Deny from 181.191.102.217
@@ -17495,6 +17506,7 @@ Deny from 195.78.54.128
 Deny from 195.78.54.13
 Deny from 195.78.54.134
 Deny from 195.78.54.146
+Deny from 195.78.54.148
 Deny from 195.78.54.16
 Deny from 195.78.54.21
 Deny from 195.78.54.27
@@ -21296,6 +21308,7 @@ Deny from 217.138.211.244
 Deny from 217.138.211.245
 Deny from 217.147.46.102
 Deny from 217.15.161.58
+Deny from 217.15.165.7
 Deny from 217.160.102.116
 Deny from 217.160.102.119
 Deny from 217.160.102.46
@@ -22494,6 +22507,7 @@ Deny from 3.108.238.210
 Deny from 3.109.183.76
 Deny from 3.109.202.180
 Deny from 3.110.109.201
+Deny from 3.110.152.96
 Deny from 3.110.173.127
 Deny from 3.110.43.164
 Deny from 3.111.149.29
@@ -22949,6 +22963,7 @@ Deny from 34.219.93.247
 Deny from 34.220.135.196
 Deny from 34.221.123.243
 Deny from 34.222.87.221
+Deny from 34.223.217.100
 Deny from 34.224.101.148
 Deny from 34.224.51.35
 Deny from 34.227.89.200
@@ -25734,6 +25749,7 @@ Deny from 45.134.142.73
 Deny from 45.134.142.77
 Deny from 45.134.225.229
 Deny from 45.134.23.245
+Deny from 45.134.79.110
 Deny from 45.134.79.147
 Deny from 45.135.187.106
 Deny from 45.135.232.70
@@ -27864,6 +27880,7 @@ Deny from 51.255.223.31
 Deny from 51.255.3.35
 Deny from 51.255.50.111
 Deny from 51.255.64.58
+Deny from 51.255.76.235
 Deny from 5.128.87.65
 Deny from 5.13.212.53
 Deny from 5.133.133.185
@@ -29995,6 +30012,7 @@ Deny from 65.109.63.131
 Deny from 65.109.67.81
 Deny from 65.109.94.163
 Deny from 65.109.94.164
+Deny from 65.1.12.148
 Deny from 65.1.132.250
 Deny from 65.128.16.189
 Deny from 65.129.32.218
@@ -32585,6 +32603,7 @@ Deny from 87.117.230.146
 Deny from 87.119.130.166
 Deny from 87.119.186.149
 Deny from 87.120.113.19
+Deny from 87.120.113.220
 Deny from 87.120.113.29
 Deny from 87.120.114.143
 Deny from 87.120.114.171
