--- a/private/.htaccess
+++ b/private/.htaccess
@@ -191,6 +191,7 @@ Deny from 102.129.153.232
 Deny from 102.129.153.246
 Deny from 102.129.153.241
 Deny from 102.129.153.248
+Deny from 102.129.223.92
 Deny from 102.129.252.152
 Deny from 102.129.252.166
 Deny from 102.129.40.35
@@ -2259,6 +2260,7 @@ Deny from 104.168.162.224
 Deny from 104.168.163.85
 Deny from 104.168.163.94
 Deny from 104.168.165.119
+Deny from 104.168.165.29
 Deny from 104.168.167.50
 Deny from 104.168.169.113
 Deny from 104.168.169.132
@@ -2425,6 +2427,7 @@ Deny from 104.234.53.52
 Deny from 104.234.53.90
 Deny from 104.234.67.149
 Deny from 104.236.196.212
+Deny from 104.236.206.165
 Deny from 104.236.25.191
 Deny from 104.236.25.198
 Deny from 104.236.45.152
@@ -3361,6 +3364,7 @@ Deny from 109.64.233.153
 Deny from 109.64.73.194
 Deny from 109.67.130.59
 Deny from 109.69.107.91
+Deny from 109.69.109.66
 Deny from 109.69.66.101
 Deny from 109.69.66.105
 Deny from 109.69.67.17
@@ -11057,6 +11061,7 @@ Deny from 167.71.214.42
 Deny from 167.71.216.228
 Deny from 167.71.216.37
 Deny from 167.71.217.7
+Deny from 167.71.220.132
 Deny from 167.71.220.185
 Deny from 167.71.220.202
 Deny from 167.71.221.183
@@ -23190,6 +23195,7 @@ Deny from 34.77.162.8
 Deny from 34.77.7.131
 Deny from 34.78.124.244
 Deny from 34.78.72.156
+Deny from 34.82.118.170
 Deny from 34.82.129.35
 Deny from 34.82.193.189
 Deny from 34.82.36.139
@@ -23370,6 +23376,7 @@ Deny from 35.197.110.103
 Deny from 35.197.117.39
 Deny from 35.197.95.164
 Deny from 35.198.195.74
+Deny from 35.198.249.96
 Deny from 35.198.25.12
 Deny from 35.198.40.14
 Deny from 35.199.191.157
@@ -28665,6 +28672,7 @@ Deny from 54.202.24.142
 Deny from 54.203.1.228
 Deny from 54.211.145.11
 Deny from 54.212.198.24
+Deny from 54.212.33.101
 Deny from 54.214.84.243
 Deny from 54.221.34.146
 Deny from 54.221.63.43
@@ -30024,6 +30032,7 @@ Deny from 65.191.112.194
 Deny from 65.1.91.219
 Deny from 65.19.141.117
 Deny from 65.20.104.217
+Deny from 65.20.114.241
 Deny from 65.20.130.19
 Deny from 65.20.149.180
 Deny from 65.20.85.156
@@ -32562,6 +32571,7 @@ Deny from 87.10.233.242
 Deny from 87.103.246.30
 Deny from 87.106.157.37
 Deny from 87.106.198.168
+Deny from 87.106.59.197
 Deny from 87.107.144.155
 Deny from 87.107.144.54
 Deny from 87.107.167.14
