--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -2423,8 +2423,49 @@ Deny from 104.234.140.8
 Deny from 104.234.204.134
 Deny from 104.234.53.139
 Deny from 104.234.53.39
+Deny from 104.234.53.47
+Deny from 104.234.53.48
+Deny from 104.234.53.49
+Deny from 104.234.53.50
+Deny from 104.234.53.51
 Deny from 104.234.53.52
+Deny from 104.234.53.53
+Deny from 104.234.53.54
+Deny from 104.234.53.55
+Deny from 104.234.53.56
+Deny from 104.234.53.57
+Deny from 104.234.53.58
+Deny from 104.234.53.59
+Deny from 104.234.53.60
+Deny from 104.234.53.62
+Deny from 104.234.53.63
+Deny from 104.234.53.64
+Deny from 104.234.53.65
+Deny from 104.234.53.67
+Deny from 104.234.53.70
+Deny from 104.234.53.71
+Deny from 104.234.53.72
+Deny from 104.234.53.73
+Deny from 104.234.53.74
+Deny from 104.234.53.76
+Deny from 104.234.53.77
+Deny from 104.234.53.78
+Deny from 104.234.53.79
+Deny from 104.234.53.80
+Deny from 104.234.53.81
+Deny from 104.234.53.82
+Deny from 104.234.53.83
+Deny from 104.234.53.84
+Deny from 104.234.53.85
+Deny from 104.234.53.86
+Deny from 104.234.53.87
+Deny from 104.234.53.88
+Deny from 104.234.53.89
 Deny from 104.234.53.90
+Deny from 104.234.53.91
+Deny from 104.234.53.92
+Deny from 104.234.53.93
+Deny from 104.234.53.94
 Deny from 104.234.67.149
 Deny from 104.236.196.212
 Deny from 104.236.206.165
@@ -6085,6 +6126,7 @@ Deny from 128.199.154.219
 Deny from 128.199.157.239
 Deny from 128.199.160.240
 Deny from 128.199.162.132
+Deny from 128.199.164.32
 Deny from 128.199.166.218
 Deny from 128.199.166.51
 Deny from 128.199.167.175
@@ -7031,6 +7073,7 @@ Deny from 138.197.179.94
 Deny from 138.197.191.87
 Deny from 138.197.230.80
 Deny from 138.197.75.211
+Deny from 138.197.8.233
 Deny from 138.197.86.72
 Deny from 138.197.94.209
 Deny from 138.199.14.146
@@ -10281,6 +10324,7 @@ Deny from 159.89.203.190
 Deny from 159.89.203.26
 Deny from 159.89.207.154
 Deny from 159.89.207.75
+Deny from 159.89.230.4
 Deny from 159.89.23.231
 Deny from 159.89.234.184
 Deny from 159.89.27.131
@@ -10941,6 +10985,7 @@ Deny from 167.114.77.4
 Deny from 167.114.86.81
 Deny from 167.160.170.93
 Deny from 167.160.172.7
+Deny from 167.172.100.9
 Deny from 167.172.102.189
 Deny from 167.172.108.192
 Deny from 167.172.144.31
@@ -11961,7 +12006,11 @@ Deny from 173.236.176.131
 Deny from 173.236.176.14
 Deny from 173.236.176.141
 Deny from 173.236.184.113
+Deny from 173.236.193.44
+Deny from 173.236.193.45
 Deny from 173.236.193.46
+Deny from 173.236.193.47
+Deny from 173.236.193.48
 Deny from 173.236.210.94
 Deny from 173.236.219.15
 Deny from 173.236.246.239
@@ -14065,6 +14114,7 @@ Deny from 18.222.197.16
 Deny from 18.222.203.54
 Deny from 18.222.210.156
 Deny from 182.224.235.37
+Deny from 18.222.56.51
 Deny from 18.223.168.210
 Deny from 182.255.43.142
 Deny from 182.228.237.196
@@ -14500,6 +14550,7 @@ Deny from 185.153.151.137
 Deny from 185.153.151.167
 Deny from 185.153.151.180
 Deny from 185.153.176.23
+Deny from 185.153.177.5
 Deny from 185.153.8.103
 Deny from 185.15.38.112
 Deny from 185.154.131.35
@@ -15665,6 +15716,7 @@ Deny from 188.166.1.143
 Deny from 188.166.115.25
 Deny from 188.166.127.20
 Deny from 188.166.147.46
+Deny from 188.166.172.89
 Deny from 188.166.177.234
 Deny from 188.166.178.164
 Deny from 188.166.178.218
@@ -17013,6 +17065,7 @@ Deny from 193.42.32.43
 Deny from 193.42.33.150
 Deny from 193.42.33.36
 Deny from 193.42.33.53
+Deny from 193.42.60.33
 Deny from 193.43.118.107
 Deny from 193.46.255.175
 Deny from 193.47.61.198
@@ -18709,6 +18762,9 @@ Deny from 198.98.54.32
 Deny from 198.98.57.108
 Deny from 199.101.142.75
 Deny from 199.101.196.107
+Deny from 199.101.196.70
+Deny from 199.101.196.71
+Deny from 199.101.196.72
 Deny from 199.101.199.40
 Deny from 199.116.250.61
 Deny from 199.167.138.128
@@ -22649,6 +22705,7 @@ Deny from 31.28.162.40
 Deny from 31.28.162.56
 Deny from 3.128.26.105
 Deny from 3.129.16.29
+Deny from 3.129.68.196
 Deny from 3.131.157.130
 Deny from 3.131.157.151
 Deny from 3.13.169.166
@@ -25602,6 +25659,7 @@ Deny from 44.236.133.248
 Deny from 44.236.48.177
 Deny from 44.239.59.221
 Deny from 44.242.150.223
+Deny from 44.243.244.138
 Deny from 44.245.178.126
 Deny from 45.10.151.10
 Deny from 45.10.154.203
@@ -29808,6 +29866,7 @@ Deny from 64.124.8.206
 Deny from 64.124.8.213
 Deny from 64.124.8.217
 Deny from 64.124.8.225
+Deny from 64.124.8.242
 Deny from 64.124.8.23
 Deny from 64.124.8.234
 Deny from 64.124.8.24
@@ -29934,6 +29993,7 @@ Deny from 64.23.181.56
 Deny from 64.231.85.200
 Deny from 64.23.218.208
 Deny from 64.23.219.49
+Deny from 64.23.253.208
 Deny from 64.235.231.20
 Deny from 64.237.133.197
 Deny from 64.31.3.110
@@ -30357,6 +30417,7 @@ Deny from 68.183.228.227
 Deny from 68.183.229.214
 Deny from 68.183.231.120
 Deny from 68.183.231.203
+Deny from 68.183.231.225
 Deny from 68.183.232.114
 Deny from 68.183.232.129
 Deny from 68.183.233.10
@@ -32695,6 +32756,7 @@ Deny from 87.249.132.171
 Deny from 87.249.132.176
 Deny from 87.249.132.180
 Deny from 87.249.132.185
+Deny from 87.249.132.187
 Deny from 87.249.132.19
 Deny from 87.249.132.24
 Deny from 87.249.132.30
