--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -8368,6 +8368,7 @@ Deny from 146.70.178.244
 Deny from 146.70.181.230
 Deny from 146.70.181.235
 Deny from 146.70.183.206
+Deny from 146.70.184.103
 Deny from 146.70.184.15
 Deny from 146.70.185.105
 Deny from 146.70.189.107
@@ -11229,6 +11230,7 @@ Deny from 167.94.138.63
 Deny from 167.94.145.58
 Deny from 167.99.10.179
 Deny from 167.99.118.9
+Deny from 167.99.119.158
 Deny from 167.99.12.66
 Deny from 167.99.127.71
 Deny from 167.99.13.90
@@ -12216,6 +12218,7 @@ Deny from 174.138.21.255
 Deny from 174.138.22.14
 Deny from 174.138.23.72
 Deny from 174.138.24.81
+Deny from 174.138.26.175
 Deny from 174.138.26.36
 Deny from 174.138.27.137
 Deny from 174.138.28.150
@@ -19611,6 +19614,7 @@ Deny from 20.198.107.105
 Deny from 20.198.113.16
 Deny from 20.198.124.217
 Deny from 20.198.221.121
+Deny from 20.198.224.111
 Deny from 20.198.3.243
 Deny from 20.198.4.37
 Deny from 20.198.71.239
@@ -20293,6 +20297,7 @@ Deny from 20.40.51.137
 Deny from 20.40.52.29
 Deny from 20.40.62.30
 Deny from 20.40.66.121
+Deny from 204.10.194.175
 Deny from 20.41.101.26
 Deny from 20.41.106.234
 Deny from 204.111.113.35
@@ -24045,6 +24050,7 @@ Deny from 37.19.223.243
 Deny from 37.19.223.27
 Deny from 37.19.223.29
 Deny from 37.19.223.36
+Deny from 37.19.223.4
 Deny from 37.19.223.6
 Deny from 37.19.223.8
 Deny from 37.19.223.98
@@ -24291,6 +24297,7 @@ Deny from 38.153.251.181
 Deny from 38.153.251.97
 Deny from 38.154.163.138
 Deny from 38.154.204.218
+Deny from 38.154.56.112
 Deny from 38.154.68.228
 Deny from 38.154.74.217
 Deny from 38.154.99.149
@@ -28911,6 +28918,7 @@ Deny from 54.201.63.7
 Deny from 54.202.142.140
 Deny from 54.202.24.142
 Deny from 54.203.1.228
+Deny from 54.208.190.5
 Deny from 54.211.145.11
 Deny from 54.221.159.124
 Deny from 54.212.198.24
@@ -30028,7 +30036,9 @@ Deny from 64.124.8.103
 Deny from 64.124.8.116
 Deny from 64.124.8.138
 Deny from 64.124.8.147
+Deny from 64.124.8.162
 Deny from 64.124.8.17
+Deny from 64.124.8.178
 Deny from 64.124.8.179
 Deny from 64.124.8.192
 Deny from 64.124.8.193
@@ -33202,6 +33212,7 @@ Deny from 89.187.182.24
 Deny from 89.187.182.3
 Deny from 89.187.185.38
 Deny from 89.187.185.56
+Deny from 89.190.156.240
 Deny from 89.200.203.20
 Deny from 89.201.167.100
 Deny from 89.205.62.106
